@@ -1,3 +1,7 @@
+2008-04-27 Dietmar Warning
+ * src/frontend/inpcom.c: change _DEBUG to TRACE - unique debug switches
+ * src/frontend/plotting/gnuplot.c: adding windows gnuplot, some modifications
+
 2008-04-26 Holger Vogt
  * src/frontend/inpcom.c: inp_sort_params() now uses dynamic memory allocation
    on the heap: no enlargement of stack size is necessary. 
